--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,13 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-          <p class:"navbar-brand"> <%= link_to "LOGO", root_path %> </p>
+          <p class:"navbar-brand"> <%= link_to "ながたCAKE", root_path %> </p>
+
+　　　　　<div>
+          <% if customer_signed_in? %>
+          　　ようこそ、<%= current_customer.last_name %>さん！
+          <% end %>
+          </div>
 
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
