--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -20,13 +20,23 @@
       <p>¥<%= @item.with_tax_price %>円　(税込)</p>
 
     <div class="row mt-5">
-      <%= form_with model: @cart_item, url: cart_items_path, local: true do |f| %>
-      <%= f.hidden_field :item_id, value: @item.id %>
-        <div class="form-group mb-5">
-          <%= f.select :amount, *[1..10], { include_blank: '個数選択'}, { class: 'form-control' , required: true } %>
-        </div>
-        <div class="form-group">
-          <%= f.submit 'カートに入れる', class: 'btn btn-success' %>
+      <% if customer_signed_in? %>
+        <%= form_with model: @cart_item, url: cart_items_path, local: true do |f| %>
+        <%= f.hidden_field :item_id, value: @item.id %>
+          <div class="form-group mb-5">
+            <%= f.select :amount, *[1..10], { include_blank: '個数選択'}, { class: 'form-control' , required: true } %>
+          </div>
+          <div class="form-group">
+            <%= f.submit 'カートに入れる', class: 'btn btn-success' %>
+          </div>
+        <% end %>
+        <% else %>
+        <div>
+        <p class="text-danger mb-5">カートに追加するには会員登録が必要です。</p>
+        <p><strong>会員登録がお済みでない方</strong></p>
+        <P class="mb-3"><%= link_to "こちら", new_customer_registration_path %>から新規登録を行ってください。</P>
+        <p><strong>既に登録済みの方</strong></p>
+        <p><%= link_to "こちら", new_customer_session_path %>からログインしてください。</p>
         </div>
       <% end %>
     </div>
