--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -78,6 +78,17 @@
               <% end %>
             </ul>
           </div>
+          
+          <% if customer_signed_in? %>
+          <div>
+            <%= form_tag(items_path,:method => 'get') do %>
+              <%= text_field_tag :search %>
+              <%= submit_tag 'Search', :name => nil %>
+            <% end %>
+          </div>
+          <% end %>
+          
+
         </div>
       </nav>
     </header>
