--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-          <p class:"navbar-brand"> <%= link_to "ながたCAKE", root_path %> </p>
+          <p class:"navbar-brand"> <%= link_to "ながのCAKE", root_path %> </p>
 
 　　　　　<div>
           <% if customer_signed_in? %>
@@ -78,7 +78,7 @@
               <% end %>
             </ul>
           </div>
-          
+
           <% if customer_signed_in? %>
           <div>
             <%= form_tag(items_path,:method => 'get') do %>
@@ -87,7 +87,7 @@
             <% end %>
           </div>
           <% end %>
-          
+
 
         </div>
       </nav>
