--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -71,10 +71,12 @@
     </div>
   </div>
 
+  <% unless @cart_items.empty? %>
   <div class="row mt-5">
     <div class="col-md-12 text-center">
       <%= link_to "情報入力に進む", new_order_path, class: "btn btn-success" %>
     </div>
   </div>
+  <% end %>
 
 </div>
