--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -20,6 +20,6 @@
   <div class="row">
     <div class="col-md-4"></div>
     <%= link_to "退会しない", customers_my_page_path, class: "btn btn-primary col-md-2 mr-2" %>
-    <%= link_to "退会する", customers_withdraw_path, method: :patch, class: "btn btn-danger col-md-2 ml-2" %>
+    <%= link_to "退会する", customers_withdraw_path, method: :patch, data: { confirm: '退会しますか？' }, class: "btn btn-danger col-md-2 ml-2" %>
   </div>
 </div>
